# binary_structs

./: .gitignore  README.md  __init__.py  benchmark.py  binary_struct.py  buffer.py  conftest.py  endianness.py  pyproject.toml  requirements.txt  setup.cfg
buffers/: binary_buffer.py  typed_buffer.py
src/binary_structs/: __init__.py  binary_struct.py  endianness.py
src/binary_structs/utils/: __init__.py
src/binary_structs/utils/binary_field/: __init__.py  base_fields.py  binary_field.py
src/binary_structs/utils/buffers/: __init__.py  binary_buffer.py  typed_buffer.py
unittests/: test_binary_buffer.py  test_binary_field.py  test_binary_struct.py  test_binary_struct_endianness.py  test_binary_struct_inheritence.py  test_binary_struct_init.py  test_binary_struct_serialization.py  test_buffer.py  test_typed_buffer.py
unittests/binary_struct/: test_binary_struct_cache.py  test_binary_struct_custom_impl.py  test_binary_struct_endianness.py  test_binary_struct_features.py  test_binary_struct_inheritence.py  test_binary_struct_init.py  test_binary_struct_misc.py  test_binary_struct_serialization.py
unittests/utils/: test_base_fields.py  test_binary_buffer.py  test_binary_field.py  test_typed_buffer.py
utils/: binary_field.py
utils/buffers/: binary_buffer.py  typed_buffer.py
