[metadata]
name = binary_structs
version = 1.2.0
author = Ido Masubi
author_email = idomass@github.com
description = A python library for binary structs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Idomass/binary_structs

classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9.5

[options.packages.find]
where = src
